# huyingjundawang

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.py  requirements.txt  启动.bat
.github/workflows/: windows-build-release.yml
Project_BackupTool/: 一键重建-英文目录构建.bat  启动软件-仅演示界面.bat  启动软件-本地.bat
Project_BackupTool/docs/: 使用说明.md  前后端开发流程.md  当前状态与ClaudeCode交接.md  组员使用手册.md  项目全景与AI使用清单.md
Project_BackupTool/goal/: 00_backend_goal.md  01_codex_prompt.md
Project_BackupTool/gui/BackupTool/: CMakeLists.txt  README.md  build_msvc.bat
Project_BackupTool/gui/BackupTool/src/: BackendAdapter.cpp  BackendAdapter.h  BackupTab.cpp  BackupTab.h  DecorativePanel.cpp  DecorativePanel.h  FilterTab.cpp  FilterTab.h  LogPanel.cpp  MainWindow.cpp  MainWindow.h  MockBackend.cpp  PathPicker.cpp  PathPicker.h  RealBackend.cpp  RealBackend.h  RestoreTab.cpp  Theme.cpp  Theme.h  main.cpp
Project_BackupTool/gui/BackupTool/src/core/: README.md  backup_task.cpp  metadata.cpp
Project_BackupTool/gui/BackupTool/tests/: core_tests.cpp  real_backend_smoke.cpp
Project_BackupTool/ppt/: 数据备份软件_答辩.pptx
Project_BackupTool/report/: 实验报告.md
Project_BackupTool/tools/: check_local_run.py  gather_for_uml.py  setup_local_run.py
app/: __init__.py  gui.py  qt_compat.py
backend/: build.bat  pbackup_core.cpp  pbackup_core.h  pbackup_main.cpp
demo7.6/: Makefile  README.md
demo7.6/docs/: demo_video_script.md  design.md  presentation.md  project_presentation.pptx  requirements.md  test_report.md  实验报告-文件备份软件.docx
demo7.6/src/: backup.cpp  backup.hpp  gui.cpp  main.cpp
demo7.6/tests/: run_tests.ps1
demo7.6/tools/: create_experiment_report.py  create_presentation.py
demo7.9/: .gitignore  启动-数据备份工具.bat  启动软件-仅演示界面.bat
demo7.9/b_src/: CMakeLists.txt  CMakePresets.json  README.md  build_msvc.bat  build_vs2019.bat
demo7.9/b_src/src/: BackendAdapter.cpp  BackendAdapter.h  FilterTab.cpp  FilterTab.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  MockBackend.h  PathPicker.cpp  ProgressDialog.cpp  ProgressDialog.h  RestoreTab.cpp  RestoreTab.h  SessionHistory.cpp  Theme.cpp  main.cpp
demo7.9/b_src/src/core/: archive.cpp  backup_task.cpp  binary_io.h  encoding.cpp  scanner.h
demo7.9/b_src/tests/: gui_signal_smoke.cpp
docs/: acceptance_matrix.md  github_actions_usage.md  project_readme.md
scripts/: package_windows.ps1
src/: BackendAdapter.cpp  BackupTab.cpp  LogPanel.cpp  ProgressDialog.cpp  RealBackend.cpp  RealBackend.h  SessionHistory.cpp  SessionHistory.h  Theme.cpp  Theme.h  main.cpp
src/core/: README.md  archive.h  backup_task.cpp  backup_task.h  binary_io.cpp  checksum.cpp  checksum.h  crypto.cpp  crypto.h  encoding.h  filter.cpp  filter.h  huffman.cpp  huffman.h  metadata.cpp  metadata.h  scanner.cpp  types.cpp  types.h
src/core/docs/: format.md
tests/: README.md  gui_signal_smoke.cpp  real_backend_smoke.cpp  run_tests.ps1  test_cases.csv  test_python.py
tests/results/: latest.csv  latest.json  summary.md
tests/work/TC-012/restore/: standalone.txt
tests/work/TC-026/restore/: report_01.docx
tests/work/TC-028/restore/nested/: beta.txt
tests/work/TC-043/restore/中文目录/: 数据.txt
tests/work/TC-044/restore/: 测试文件.txt
